--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -89,7 +89,7 @@ endmacro(add_unit_test)
 
 set(TEST_LIBRARIES
         keepassx_core
-        ${keepasshttp_LIB}
+        ${keepassxcbrowser_LIB}
         ${autotype_LIB}
         Qt5::Core
         Qt5::Concurrent
