macOS 10.15: Request screen reader permission for AutoType
* Fix #3609 - Request screen reader permission by faking a 1px screenshot. Thanks to MacPass for this idea.
* Fix #3578 - Remove duplicate sandbox entitlement
* Fix #3270 - Use executable path reference for libquazip

--- a/src/cli/CMakeLists.txt
+++ b/src/cli/CMakeLists.txt
@@ -105,6 +105,8 @@ if(APPLE AND WITH_APP_BUNDLE)
                                 "@executable_path/../Frameworks/libyubikey.0.dylib"
                             -change /usr/local/opt/ykpers/lib/libykpers-1.1.dylib
                                 "@executable_path/../Frameworks/libykpers-1.1.dylib"
+                            -change /usr/local/opt/quazip/lib/libquazip.1.dylib
+                                "@executable_path/../Frameworks/libquazip.1.dylib"
                        keepassxc-cli
                        COMMENT "Changing linking of keepassxc-cli")
 
