CLI: Add Import XML command (#3572)
The CLI now contains an "import" command that creates a new database from the specified XML export. The new database is in kdbx 4 format, and does not currently accept a keyfile in database creation.

This change is required to create new databases from XML backups.

Fixes #2458

--- a/src/cli/CMakeLists.txt
+++ b/src/cli/CMakeLists.txt
@@ -29,6 +29,7 @@ set(cli_SOURCES
         Export.cpp
         Generate.cpp
         Help.cpp
+        Import.cpp
         List.cpp
         Locate.cpp
         Merge.cpp
