Fix building without features
* Fix #3684 - Include YubiKey headers in CLI tests 

* Skip building testguibrowser if browser integration is disabled

* Cleanup test CMakeLists

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -87,17 +87,7 @@ macro(add_unit_test)
     endif()
 endmacro(add_unit_test)
 
-set(TEST_LIBRARIES
-        keepassx_core
-        ${keepassxcbrowser_LIB}
-        ${autotype_LIB}
-        Qt5::Core
-        Qt5::Concurrent
-        Qt5::Widgets
-        Qt5::Test
-        ${GCRYPT_LIBRARIES}
-        ${GPGERROR_LIBRARIES}
-        ${ZLIB_LIBRARIES})
+set(TEST_LIBRARIES keepassx_core Qt5::Test)
 
 set(testsupport_SOURCES
         modeltest.cpp
@@ -107,10 +97,6 @@ set(testsupport_SOURCES
         stub/TestRandom.cpp)
 add_library(testsupport STATIC ${testsupport_SOURCES})
 target_link_libraries(testsupport Qt5::Core Qt5::Concurrent Qt5::Widgets Qt5::Test)
-
-if(YUBIKEY_FOUND)
-    set(TEST_LIBRARIES ${TEST_LIBRARIES} ${YUBIKEY_LIBRARIES})
-endif()
 
 add_unit_test(NAME testgroup SOURCES TestGroup.cpp
         LIBS testsupport ${TEST_LIBRARIES})
