Add additional maintainer

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
-github: droidmonkey
+github: ["droidmonkey", "phoerious"]
 patreon: keepassxc
 liberapay: keepassxc
 custom: ["https://keepassxc.org/donate"]
